kustomize/components/temporal/web-ui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: temporal-web
  namespace: temporal
spec:
  replicas: 1
  selector:
    matchLabels:
      app: temporal-web
  template:
    metadata:
      labels:
        app: temporal-web
    spec:
      containers:
      - name: web
        image: temporalio/ui:2.21.3
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: temporal-web
  namespace: temporal
spec:
  selector:
    app: temporal-web
  ports:
  - port: 8080
    targetPort: 8080
    nodePort: 30080
  type: NodePort
